<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="880dp"
        android:layout_height="520dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/uavsetting_logo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/uavsetting_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_toEndOf="@+id/uavsetting_logo"
                android:text="@string/uavsetting"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="17dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="monospace"/>

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="450dp"
                android:background="@color/royalblue"
                android:text="@string/upload"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_adduav"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="100dp"
                android:background="@color/royalblue"
                android:text="@string/add"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <LinearLayout
                    android:id="@+id/ll_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_IP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>