<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="880dp"
        android:layout_height="520dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="系统参数设置"
                android:layout_marginStart="400dp"
                android:textColor="@color/black"
                android:layout_marginTop="17dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="monospace"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginStart="230dp"
                android:background="@color/royalblue"
                android:text="@string/save"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:id="@+id/distance_x"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/x_distence"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:id="@+id/et_x"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="650dp"
                    android:layout_toRightOf="@+id/distance_x"
                    android:background="@drawable/editext_selector"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/meter"
                    android:layout_marginStart="830dp"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:id="@+id/distance_y"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:text="编队默认间距Y方向"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:id="@+id/et_y"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="650dp"
                    android:layout_toRightOf="@+id/distance_y"
                    android:background="@drawable/editext_selector"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/meter"
                    android:layout_marginStart="830dp"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:id="@+id/distance_z"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/z_distance"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:id="@+id/et_z"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="650dp"
                    android:layout_toRightOf="@+id/distance_z"
                    android:background="@drawable/editext_selector"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/meter"
                    android:layout_marginStart="830dp"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:id="@+id/launch_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/launch_delay"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:id="@+id/et_launchdelay"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="694dp"
                    android:layout_toRightOf="@+id/launch_delay"
                    android:background="@drawable/editext_selector"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/s"
                    android:layout_marginStart="830dp"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:id="@+id/escape_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/escape_delay"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:id="@+id/et_escapedelay"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="694dp"
                    android:layout_toRightOf="@+id/escape_delay"
                    android:background="@drawable/editext_selector"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/s"
                    android:layout_marginStart="830dp"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:id="@+id/System_Coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp"
                    android:text="系统坐标系"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/sp_coordinate"
                    android:layout_width="120dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/System_Coordinate"
                    android:layout_marginLeft="657dp"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>